--- a/hello_world/static/main.css
+++ b/hello_world/static/main.css
@@ -1,4 +1,4 @@
-/* styles.css */
+
 
 * {
   margin: 0;
@@ -8,76 +8,74 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #f4f4f4; /* Cor de fundo */
-  color: #333; /* Cor do texto */
+  background-color: #f4f4f4;
 }
 
 header {
-  background-color: #333;
+  background-color: #00573d;
   color: white;
-  padding: 1em 0;
-  text-align: center;
+  padding: 10px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-header nav ul {
+.header-content {
+  display: flex;
+  align-items: center;
+}
+
+.logo {
+  height: 60px;
+  margin-right: 15px;
+}
+
+header h1 {
+  font-size: 2em;
+}
+
+nav ul {
   list-style-type: none;
+  display: flex;
+  gap: 20px;
+  padding-top: 10px;
 }
 
-header nav ul li {
-  display: inline;
-  margin: 0 10px;
-}
-
-header nav ul li a {
+nav ul li a {
   color: white;
   text-decoration: none;
+  font-weight: bold;
+}
+
+nav ul li a:hover {
+  text-decoration: underline;
+}
+
+.hero {
+  width: 100%;
+  overflow: hidden;
+}
+
+.hero-image {
+  width: 100%;
+  height: auto;
 }
 
 main {
   padding: 20px;
   max-width: 800px;
-  margin: auto;
-  background-color: #fff; /* Fundo branco para o conteúdo principal */
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Sombra para destacar */
+  margin: 20px auto;
+  background-color: white;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-footer {
-  background-color: #333;
-  color: white;
-  text-align: center;
-  padding: 1em 0;
-  margin-top: 20px;
+.welcome h2 {
+  font-size: 1.8em;
+  margin-bottom: 10px;
 }
 
-  
-  .App {
-    text-align: center;
-  }
-  
-  .App-logo {
-    height: 40vmin;
-    pointer-events: none;
-  }
-  
-  .App-header {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-  }
-  
-  .App-link {
-    color: #61dafb;
-  }
-  
-  .heart {
-    color: #ff0000;
-  }
-  
-  .small {
-    font-size: 0.75rem;
-  }
+.welcome p {
+  font-size: 1.1em;
+  line-height: 1.6;
+  margin-top: 10px;
+}
