--- a/hello_world/templates/index.html
+++ b/hello_world/templates/index.html
@@ -21,10 +21,10 @@
             <ul>
                 <li><a href="{% url 'index' %}">Line U Puc - Início</a></li>
                 <li><a href="{% url 'calendario' %}">Calendário</a></li>
-                <li><a href="#inscreva-se">Inscreva-se agora</a></li>
+                <li><a href="{% url 'inscrever_se' %}">Inscreva-se agora</a></li>
                 <li><a href="#fale-conosco">Fale conosco</a></li>
                 <li><a href="{% url 'faq' %}">FAQ</a></li>
-                <li><a href="#iniciar-sessao">Iniciar Sessão</a></li>
+                <li><a href="{% url 'iniciar_sessao' %}">Iniciar Sessão</a></li>
             </ul>
         </nav>
     </header>
